# SimpleECS

./: .gitignore  CMakeLists.txt
include/: component.h  component_manager.h  component_pool.h  entity_manager.h  scene.h  types.h
src/: component_manager.cpp  component_pool.cpp  entity_manager.cpp  main.cpp  scene.cpp
